# predictive-ai-roadmap

./: .gitignore  LICENSE  README.md  pyproject.toml
data/raw/: Coca-Cola_stock_history.csv
docs/: learning_notes.md
notebooks/: GARCH_model.ipynb  brownian_demo.ipynb  gaussian_brownian.ipynb  moving_averages.ipynb  rolling_volatility.ipynb
src/: stock_simulator.py
